Fix layout issues caused by the pseudo-element

--- a/docsite/index.css
+++ b/docsite/index.css
@@ -1218,7 +1218,9 @@ pre[class*="language-"] {
 
   &::before {
   content: '';
-  counter-reset: basic;}
+  counter-reset: basic;
+  position: absolute;
+}
 
   & > *::before {
     counter-increment: basic;
